--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,15 @@
+html{
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: rgb(183,209,247);
+  background: radial-gradient(circle, rgba(183,209,247,1) 8%, rgba(163,166,251,1) 100%);
+}
+
 body {
-  margin: 0;
+  height: 100%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -11,3 +21,4 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
